--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Pourquoi notre futur dépend des bibliothèques, de la lecture et de l’imagination ?</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/typo.css">
-    <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/typo.css">
+    <link rel="stylesheet" href="styles/master.css">
 
   </head>
   <body>
